syntax = "proto3";

package hats;

option go_package = "hatspb";

// Hats service makes hats for clients.
service Hats {
  // MakeHat produces a hat of mysterious, randomly-selected color!
  rpc MakeHat(MakeHatRequest) returns (MakeHatResponse);
  // ListHats returns hats for the given page
  rpc ListHats(ListHatsRequest) returns (ListHatsResponse);
}

enum Style {
  UNKNOWN = 0;
  BOWLER = 1;
  FEDORA = 2;
  BASEBALL = 3;
  NEWSBOY = 4;
  COWBOY = 5;
  DERBY = 6;
  TOP_HAT = 7;
}

// A Hat is a piece of headwear made by a Hats.
message Hat {
  string id = 1;
  int32 version = 2;
  int32 inches = 3;
  string color = 4; // anything but "invisible"
  Style style = 5;
}
// add Color enum
message MakeHatRequest {
  int32 inches = 1; // must be > 0
  string color = 2; // anything but "invisible"
  Style style = 3; // i.e. "bowler"
}
message MakeHatResponse {
  Hat hat = 1;
}

message ListHatsRequest {
  int32 limit = 1;
  int32 offset = 2;
}
message ListHatsResponse {
  repeated Hat hats = 1;
  int32 limit = 2;
  int32 offset = 3;
}
